--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.1.0",
     "@vue/runtime-dom": "^3.2.39",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-singlefile": "^0.11.1"
   }
 }
